[package]
name = "saws"
version = "0.1.0"
authors = ["Sean Abbott <sabbott.official@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-verbosity-flag = "0.3.1"
exitfailure = "0.5.1"
failure = "0.1.8"
structopt = "0.3.17"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
